# menumodel-dbusmenu-translator

./: CMakeLists.txt  README.md
applets/: .directory
applets/appmenu/lib/: appmenuapplet.cpp  appmenuapplet.h
applets/appmenu/plugin/: CMakeLists.txt  appmenugtkmenuimporter.cpp  appmenugtkmenuimporter.h  appmenumodel.cpp  appmenumodel.h  dbusmenuadaptor.cpp  dbusmenuadaptor.h  gtkmenuadaptor.cpp  gtkmenuadaptor.h  menuadaptor.h
applets/appmenu/qmenumodel/: qdbusactiongroup.h  qdbusobject.h  qmenumodel.h  qstateaction.cpp  qstateaction.h
appmenu/: CMakeLists.txt  appmenu.cpp  appmenu.h  appmenu_dbus.cpp  appmenu_dbus.h  menuimporter.cpp
libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp  dbusmenuimporter.h
libqmenumodel/src/: unitymenumodel.cpp
